2011-10-11  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Remove all references to QTDIR_build and standalone_package

        Qt is now modularized, which means we no longer import WebKit into
        the Qt source tree. Instead we use git submodules, and building
        QtWebKit as "part of Qt" is really building QtWebKit as from trunk.

        To decrease the number of buildsystem configurations we also remove
        the standalone_package code-path used when we were providing tarballs
        with the derived sources pre-generated.

        Reviewed by Simon Hausmann.

        * DerivedSources.pro:
        * UIProcess/API/qt/qmlplugin/qmlplugin.pro:
        * UIProcess/API/qt/tests/tests.pri:
        * WebKit2.pri:
        * WebProcess.pro:

2011-10-10  Nate Chapin  <japhet@chromium.org>

        Use a CachedImageClient instead of CachedResourceClient
        in WebDragClientMac.
        https://bugs.webkit.org/show_bug.cgi?id=69790

        Reviewed by Adam Barth.

        * WebProcess/WebCoreSupport/mac/WebDragClientMac.mm:
        (promisedDataClient):

2011-10-10  Mark Hahnenberg  <mhahnenberg@apple.com>

        Remove getCallDataVirtual methods
        https://bugs.webkit.org/show_bug.cgi?id=69186

        Reviewed by Geoffrey Garen.

        Removed all getCallDataVirtual methods and replaced their call sites 
        with an explicit lookup in the MethodTable.

        * WebProcess/Plugins/Netscape/JSNPMethod.cpp:
        * WebProcess/Plugins/Netscape/JSNPMethod.h:
        * WebProcess/Plugins/Netscape/JSNPObject.cpp:
        * WebProcess/Plugins/Netscape/JSNPObject.h:

2011-10-10  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt] Fix build with qreal == float on MeeGo 1.2 Harmattan

        Reviewed by Andreas Kling.

        Explicitly choose the qreal variant of qMin, since QPointF is using qreal.

        * UIProcess/qt/ViewportInteractionEngine.cpp: