@@ -1,3 +1,15 @@
+2011-10-11  Gopal Raghavan  <gopal.1.raghavan@nokia.com>
+
+        [Qt] WebProcess using proxy settings for localhost as well
+        https://bugs.webkit.org/show_bug.cgi?id=69611
+
+        Reviewed by Chang Shu.
+
+        Implemented checks in queryProxy to return QNetworkProxy::NoProxy for localhost and 127.0.0.1
+
+        * WebProcess/qt/WebProcessMainQt.cpp:
+        (WebKit::EnvHttpProxyFactory::queryProxy):
+
 2011-10-11  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>
 
         [Qt] Remove all references to QTDIR_build and standalone_package
